syntax = "proto3";

package product;

import "google/protobuf/empty.proto";

option go_package = "proto/product/";


service ProductService {
  // Product
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc ListProducts (google.protobuf.Empty) returns (ListProductsResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);

  // Category
  rpc CreateCategory (CreateCategoryRequest) returns (CategoryResponse);
  rpc ListCategories (google.protobuf.Empty) returns (ListCategoriesResponse);

  // Stock
  rpc UpdateStock (UpdateStockRequest) returns (StockResponse);
  rpc GetStock (GetStockRequest) returns (StockResponse);
}

/* =====================
       MODELS
===================== */

message Product {
  uint32 id = 1;
  string name = 2;
  string desc = 3;
  uint32 price = 4;
  uint32 category_id = 5;
  string created_at = 6;
}

message Category {
  uint32 id = 1;
  string name = 2;
}

message Stock {
  uint32 id = 1;
  uint32 product_id = 2;
  int32 quantity = 3;
  string updated_at = 4;
}

/* =====================
       PRODUCT
===================== */

message CreateProductRequest {
  string name = 1;
  string desc = 2;
  uint32 price = 3;
  uint32 category_id = 4;
}

message GetAllAddressRequest{
}

message GetProductRequest {
  uint32 id = 1;
}

message UpdateProductRequest {
  uint32 id = 1;
  string name = 2;
  string desc = 3;
  uint32 price = 4;
  uint32 category_id = 5;
}

message DeleteProductRequest {
  uint32 id = 1;
}

message ProductResponse {
  Product product = 1;
}

message ListProductsResponse {
  repeated Product products = 1;
}

message DeleteProductResponse {
  string message = 1;
}

/* =====================
       CATEGORY
===================== */

message CreateCategoryRequest {
  string name = 1;
}

message CategoryResponse {
  Category category = 1;
}

message ListCategoriesResponse {
  repeated Category categories = 1;
}

message GetAllCategoryRequest{
}

/* =====================
        STOCK
===================== */

message UpdateStockRequest {
  uint32 product_id = 1;
  int32 quantity = 2;
}

message GetStockRequest {
  uint32 product_id = 1;
}

message StockResponse {
  Stock stock = 1;
}